Weights are not displayed in "Weight Paint" mode when Subdivision modifier is placed after Armature modifier. #65165

Closed
opened 2019-05-26 22:00:25 +02:00 by Marcin Twarowski · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-25 23:18, hash: f18373a9ab
Worked: 2.79b

Short description of error
Weights are not displayed in "Weight Paint" mode when Subdivision modifier is placed after Armature modifier.
See attached file.subdivision_weight_paint_bug.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-25 23:18, hash: `f18373a9ab` Worked: 2.79b **Short description of error** Weights are not displayed in "Weight Paint" mode when Subdivision modifier is placed after Armature modifier. See attached file.[subdivision_weight_paint_bug.blend](https://archive.blender.org/developer/F7070828/subdivision_weight_paint_bug.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Added subscriber: @billyand

Added subscriber: @billyand
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

@Sergey, I think you worked on the data layers lately (although this issue is probably not related).
Is this supported in general?

@Sergey, I think you worked on the data layers lately (although this issue is probably not related). Is this supported in general?

This issue was referenced by 5c371cd36a

This issue was referenced by 5c371cd36a8db2a322c52b5248061c1df01b0818

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65165
No description provided.