Depsgraph: Fix condition inverted by mistake

Fixes T65165: Weights are not displayed in "Weight Paint" with modifiers